<?xml version="1.0" encoding="utf-8"?>

<!DOCTYPE resources [
    <!ENTITY holegame "Kulička">
    ]>

<resources>
    <string name="image_showing_robot">Image showing robot</string>

    <string name="app_name">Umíme česky</string>
    <string name="settings">Nastavení</string>

    <string name="train_game_name">Procvičování</string>
    <string name="race_game_name">Robotí závody</string>
    <string name="hole_game_name">&holegame;</string>
    <string name="settings_title">Nastavení kuličky</string>
    <string name="none">Žádné</string>
    <string name="all">Všechny</string>
    <string name="next">Další</string>
    <string name="back">Zpět</string>
    <string name="ok">OK</string>

    <string name="congratulations">Gratuluji!</string>
    <string name="series_finished">Série je u konce</string>
    <string name="success_rate">Tvá úspěšnost je</string>
    <string name="great_job">Skvělá práce!</string>
    <string name="its_ok">Ješte to ujde.</string>
    <string name="you_need_to_improve">Máš co zlepšovat.</string>
    <string name="robots_won">Roboti vyhráli</string>
    <string name="win_next_time">Snad to vyjde příšte.</string>
    <string name="your_next_level">Postupuješ do levelu číslo</string>
    <string name="in_category">v kategorii</string>
    <string name="u_r_at_max_level">Podařilo se ti dosáhnout maximálního levelu v kategorii</string>
    <string name="questions_per_series">Počet otázek na sérii:</string>
    <string name="theme">Téma</string>
    <string name="current_level">Dosažený level</string>
    <string name="choose_at_least_one_category">Zvol alespoň jednu kategorii</string>
    <string name="loading_data">Nahrávám data, hned to bude</string>
    <string name="ball_weight_text">Váha kuličky: %1$s</string>
    <string name="hint_settings_text">Nastavení hry &holegame;</string>
    <string name="display_rotation">Rotace displeje</string>
    <string name="ball_weight_explanation">Lehčí má větší citlivost a zrychlení</string>
    <string name="rate_app">Ohodnotit aplikaci</string>
    <string name="report_problem">Nahlásit problém</string>
    <string name="introduce_ball_dialog">Ovládání hry &holegame;</string>
    <string name="flappy_game">Pilná včela</string>
    <string name="highest_score">Nejvyšší skóre</string>
    <string name="flappy_speed">Rychlost včely:</string>
    <string name="gap_size">Velikost mezery:</string>
    <string name="word_difficulty">Náročnost slov</string>

</resources>
