<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/activity_main"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:activity=".activity.MainActivity">


    <ImageView
        android:id="@+id/robotIcon"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="12"
        android:adjustViewBounds="true"
        android:background="@null"
        android:clickable="false"
        android:contentDescription="@string/image_showing_robot"
        android:scaleType="centerInside"
        android:layout_margin="5dp"
        android:src="@drawable/icon"/>

    <Button
        android:id="@+id/trainingButton"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="15"
        android:paddingLeft="@dimen/main_buttons_padding"
        android:paddingRight="@dimen/main_buttons_padding"
        android:layout_margin="5dp"
        android:text="@string/train_game_name"
        android:textAllCaps="false"
        android:textSize="32sp"
        android:theme="@style/PrimaryButton"/>

    <Button
        android:id="@+id/raceButton"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="15"
        android:paddingLeft="@dimen/main_buttons_padding"
        android:paddingRight="@dimen/main_buttons_padding"
        android:layout_margin="5dp"
        android:text="@string/race_game_name"
        android:textAllCaps="false"
        android:textSize="32sp"
        android:theme="@style/PrimaryButton"/>

    <Button
        android:id="@+id/holeButton"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="15"
        android:paddingLeft="@dimen/main_buttons_padding"
        android:paddingRight="@dimen/main_buttons_padding"
        android:layout_margin="5dp"
        android:text="@string/hole_game_name"
        android:textAllCaps="false"
        android:textSize="32sp"
        android:theme="@style/PrimaryButton"/>

    <Button
        android:id="@+id/jumpButton"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="15"
        android:paddingLeft="@dimen/main_buttons_padding"
        android:paddingRight="@dimen/main_buttons_padding"
        android:layout_margin="5dp"
        android:text="@string/flappy_game"
        android:textAllCaps="false"
        android:textSize="32sp"
        android:theme="@style/PrimaryButton"/>

</LinearLayout>
